--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-left">
-            <img src="img/download.png" alt="">
+            <img src="img/Logo-RGB-1920-BLUE.png" alt="">
         </div>
         <div class="header-right">
             <ul>
