--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="#" class="cta">Iscriviti</a>
                 </li>
             </ul>
-            <a href="#">
+            <a href="#" class="open">
                 <i class="fas fa-bars"></i>
             </a>
         </div>
